--- a/css/style.css
+++ b/css/style.css
@@ -909,6 +909,10 @@ footer {
 }
 
 @media screen and (max-width: 404px){
+    
+.box .img {
+    width: 100%;
+}
     .comunidad{
         height: 235vh;
         display: flex;
