--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ header{
     flex-wrap: wrap;
     justify-content: center;
     width: 320px;
-    background: rgb(238, 243, 247);
+    background: rgba(255, 255, 255, 0.7);
     box-shadow: rgb(50 88 130 / 32%) 0px 15px 17px -5px;
     border-radius: 15px;
     transition: all 300ms ease-in-out 0s;
