--- a/css/talleres.css
+++ b/css/talleres.css
@@ -32,6 +32,7 @@ body{
 }
 .img-taller{
     display: flex;
+    justify-content: center;
     width: 100%;
     height: 450px;
     margin: auto;
@@ -218,4 +219,15 @@ body{
     .botonesmas{
         margin-top: 606px;
     }
+}
+
+@media screen and (max-width: 370px){
+
+    .botonesmas{
+        margin-top: 807px;
+    }
+    .dos{
+        height: 432vh;
+    }
+
 }
