--- a/css/temario.css
+++ b/css/temario.css
@@ -878,7 +878,8 @@ input {
     font-size: 45px;
   }
   .inner-text {
-    width: 75%;
+    width: 100%;
+    margin: 0;
     margin-top: 50px;    
     background-position: 139px 48px;
   }
